--- a/app/views/backend/dashboards/stocks.html.haml
+++ b/app/views/backend/dashboards/stocks.html.haml
@@ -4,10 +4,8 @@
     -cell :last_incoming_deliveries
   -tabbox do
     -cell :currents_stocks_by_product_nature, :params => {variety: 'mineral_matter'}
-    -cell :currents_stocks_by_product_nature, :params => {variety: 'herbicide'}
-    -cell :currents_stocks_by_product_nature, :params => {variety: 'fungicide'}
-    -cell :currents_stocks_by_product_nature, :params => {variety: 'insecticide'}
-  -tabbox do
-    -cell :currents_stocks_by_product_nature, :params => {variety: 'plant_food'}
-    -cell :currents_stocks_by_product_nature, :params => {variety: 'mineral_food'}
+    -cell :currents_stocks_by_product_nature, :params => {variety: 'organic_matter'}
     -cell :currents_stocks_by_product_nature, :params => {variety: 'straw'}
+  -tabbox do
+    -cell :currents_stocks_by_product_nature, :params => {variety: 'animal_medicine'}
+    -cell :currents_stocks_by_product_nature, :params => {variety: 'plant_medicine'}
