--- a/app/views/backend/product_nature_variants/show.html.haml
+++ b/app/views/backend/product_nature_variants/show.html.haml
@@ -1,19 +1,16 @@
 = main_toolbar do |t|
   - t.edit resource
-    
+
 = beehive do |b|
   - b.tabbox do
     - b.cell do
-      .info
-        %span.title= ProductNatureVariant.human_attribute_name(:population)
-        %span.value= resource.products.map(&:population).compact.sum
       .info
         %span.title= ProductNatureVariant.human_attribute_name(:net_weight)
         %span.value= resource.products.map(&:net_weight).compact.sum
       .info
         %span.title= ProductNatureVariant.human_attribute_name(:net_volume)
         %span.value= resource.products.map(&:net_volume).compact.sum
-  
+
     - b.cell do
       = attributes_list(resource) do |l|
         - l.attribute :name
@@ -25,7 +22,28 @@
   - b.tabbox do
     - b.cell(:products) do
       = list(:products)
-        
+    - b.cell(:stocks) do
+      - if resource.products.count > 0
+        :ruby
+            dataset = resource.products
+
+            series = []
+
+            for product in dataset
+              items = ProductIndicatorDatum.where(:indicator => :population, :product => product).order(:measured_at)
+              item_h = items.sort.inject({}) do |hash, pair|
+                hash[pair.measured_at.to_usec] = pair.value.to_d
+                hash
+              end
+              data = []
+              data = item_h.collect{|k,v| [k, v.to_s.to_f] }
+              series << {name: product.name ,data: data }
+            end
+
+        = spline_chart(series, legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom', border_width: 0 }, y_axis: {title: { text: :population.tl}, min: 0}, x_axis: {type: 'datetime', title: { enabled: true, text: :months.tl}})
+      - else
+        %strong= :no_data.tl
+
   - b.tabbox do
     -b.cell(:prices) do
       = toolbar do |t|
