--- a/app/views/backend/shared/_historic.html.haml
+++ b/app/views/backend/shared/_historic.html.haml
@@ -3,14 +3,24 @@
     - for version in resource.versions
       %li
         - if version.create?
-          %p= :created_at_by.th(at: version.created_at.l, by: version.creator_name)
+          %p= :created_at_by.th(at: version.created_at.l, by: (version.creator_name || :unknown_user.tl))
         - elsif version.update?
-          %p= :updated_at_by.th(at: version.created_at.l, by: version.creator_name)
+          %p= :updated_at_by.th(at: version.created_at.l, by: (version.creator_name || :unknown_user.tl))
           %ul.changes
             - for change in version.changes
-              %li
-                %p= :x_has_been_updated_from_a_to_b.th(x: change.human_attribute_name, a: change.old_value.l, b: change.new_value.l)
+              - o = (change.old_value.respond_to?(:l) ? change.old_value.l : change.old_value).to_s
+              - n = (change.new_value.respond_to?(:l) ? change.new_value.l : change.new_value).to_s
+              - unless o.blank? and n.blank?
+                %li
+                  %p
+                    - if o.blank?
+                      = :x_has_been_updated_to_a.th(x: change.human_attribute_name, a: n)
+                    - elsif n.blank?
+                      = :x_has_been_cleared.th(x: change.human_attribute_name, a: o)
+                    - else
+                      = :x_has_been_updated_from_a_to_b.th(x: change.human_attribute_name, a: o, b: n)
+
         - elsif version.delete?
-          %p= :destroyed_at_by.th(at: version.created_at.l, by: version.creator_name)
+          %p= :destroyed_at_by.th(at: version.created_at.l, by: (version.creator_name || :unknown_user.tl))
 
 
