--- a/app/views/backend/cells/last_milk_result_cells/show.html.haml
+++ b/app/views/backend/cells/last_milk_result_cells/show.html.haml
@@ -17,30 +17,30 @@
     #
     #  data for bar chart indicator and by month
     #
-    bar_indicators = [ :total_bacteria_concentration, :somatic_cell_concentration , :clostridial_spores_concentration]
+    bar_indicators = [:total_bacteria_concentration, :somatic_cell_concentration, :clostridial_spores_concentration].collect{|i| Nomen::Indicators[i] }
     for indicator in bar_indicators
-      items = ProductIndicatorDatum.where(:indicator => indicator).measured_between(started_on, stopped_on)
-      if items.count > 0
-        item_h = items.averages_of_periods().sort.inject({}) do |hash, pair|
-          hash[pair.expr.to_i.to_s] = pair.valeur.to_s.to_d
+      items = ProductIndicatorDatum.where(indicator_name: indicator.name).between(started_on, stopped_on)
+      if items.any?
+        item_h = items.averages_of_periods.sort.inject({}) do |hash, pair|
+          hash[pair.expr.to_i.to_s] = pair.average.to_s.to_d
           hash
         end
-        series << {type: 'column', name: indicator.tl, data: normalize_serie(item_h, categories.keys) }
+        series << {type: 'column', name: indicator.human_name, data: normalize_serie(item_h, categories.keys) }
       end
     end
 
     #
     #  data for bar chart indicator and by month
     #
-    spline_indicators = [:fat_matters_concentration, :protein_matters_concentration, :urea_concentration]
+    spline_indicators = [:fat_matters_concentration, :protein_matters_concentration, :urea_concentration].collect{|i| Nomen::Indicators[i] }
     for indicator in spline_indicators
-      items = ProductIndicatorDatum.where(:indicator => indicator.to_s).measured_between(started_on, stopped_on)
-      if items.count > 0
-        item_h = items.averages_of_periods().sort.inject({}) do |hash, pair|
-          hash[pair.expr.to_i.to_s] = pair.valeur.to_d
+      items = ProductIndicatorDatum.where(indicator_name: indicator.name).between(started_on, stopped_on)
+      if items.any?
+        item_h = items.averages_of_periods.sort.inject({}) do |hash, pair|
+          hash[pair.expr.to_i.to_s] = pair.average.to_d
           hash
         end
-        series << {type: 'spline', name: indicator.tl, data: normalize_serie(item_h, categories.keys), marker: {line_width: 2}}
+        series << {type: 'spline', name: indicator.human_name, data: normalize_serie(item_h, categories.keys), marker: {line_width: 2}}
       end
     end
 
