--- a/app/views/backend/prescriptions/_form.html.haml
+++ b/app/views/backend/prescriptions/_form.html.haml
@@ -1,6 +1,6 @@
-=field_set do
-  =f.input :reference_number
-  =f.input :delivered_on
-  =f.referenced_association :prescriptor
-  =f.referenced_association :document
-  =f.input :description
+= field_set do
+  = f.input :reference_number
+  = f.input :delivered_at
+  = f.referenced_association :prescriptor
+  = f.referenced_association :document
+  = f.input :description
