--- a/app/views/backend/product_nature_variant_indicator_data/_form.html.haml
+++ b/app/views/backend/product_nature_variant_indicator_data/_form.html.haml
@@ -1,4 +1,4 @@
-=field_set do
-  =f.referenced_association :variant
-  =f.input :indicator
-  =f.input :created_at
+= field_set do
+  = f.referenced_association :variant
+  = f.input :indicator_name
+  = f.input :created_at
