--- a/app/views/backend/dashboards/production.html.haml
+++ b/app/views/backend/dashboards/production.html.haml
@@ -1,10 +1,10 @@
 = beehive(:production) do |b|
-  - b.cell :map
+  - b.cell :map, params: {visualization: :nitrogen_footprint}
   - b.hbox do
     - b.cell :last_interventions
     - b.cell :last_products
     - b.cell :cropping_plan
-  - b.tabbox do
+  - b.hbox do
     -# b.cell :rss, :title => "Tendances Bovins de Boucherie", :params => {:url => "http://www.lafranceagricole.fr/Rss/cours-et-marches/elevage/bovins-de-boucherie-157.html"}
     - b.cell :elapsed_interventions_times_by_activities
     - b.cell :last_milk_result
