--- a/app/views/backend/dashboards/index.html.haml
+++ b/app/views/backend/dashboards/index.html.haml
@@ -1,16 +1,17 @@
-=beehive do |b|
-  -b.hbox do
-    -b.cell :modules do
-      -for mod in Ekylibre::Modules.hash.keys
-        =link_to({:action => mod}, :class=>"btn btn-big btn-#{Ekylibre::Modules.icon(mod)}", :title => Ekylibre::Modules.human_name(mod)) do
+= beehive do |b|
+  - b.hbox do
+    - b.cell :modules do
+      - for mod in Ekylibre::Modules.hash.keys
+        = link_to({:action => mod}, :class=>"btn btn-big btn-#{Ekylibre::Modules.icon(mod)}", :title => Ekylibre::Modules.human_name(mod)) do
           %i
-          =Ekylibre::Modules.human_name(mod)
-  -b.hbox do
-    -b.cell :meteo do
+          = Ekylibre::Modules.human_name(mod)
+    - b.cell :meteo do
       #cont_MTczODd8NXwxfDV8M3xGRkZGRkZ8MXxGRkZGRkZ8Y3wx
         #spa_MTczODd8NXwxfDV8M3xGRkZGRkZ8MXxGRkZGRkZ8Y3wx
           %a#a_MTczODd8NXwxfDV8M3xGRkZGRkZ8MXxGRkZGRkZ8Y3wx{href: "http://www.meteocity.com/france/saint-porchaire_v17387/", style: "color:#333;text-decoration:none;", target: "_blank"} Météo Saint-Porchaire
         %script{src: "http://widget.meteocity.com/js/MTczODd8NXwxfDV8M3xGRkZGRkZ8MXxGRkZGRkZ8Y3wx", type: "text/javascript"}
-    -b.cell :calendar
+    - b.cell :calendar
     -# b.cell :meteo do
       %img{:alt => "Météo Saint-Porchaire heure par heure", :border => "0", :src => "http://meteorologic.net/vignette-previ-1h/6026.png", :style => "max-width: 100%; margin: 0 auto; display: block"}
+
+  - b.cell :map
