--- a/app/views/backend/sale_items/_form.html.haml
+++ b/app/views/backend/sale_items/_form.html.haml
@@ -8,23 +8,23 @@
 -##detail{"data-refresh" => url_for(:controller => :sale_items, :action => :detail, :sale_id => @sale.id), "data-refresh-mode" => "update"}=render :partial => "sale_items/detail_form"
 
 -# TODO manage.to_a new attributes
-=field_set do
-  =f.referenced_association :sale, :field => :hidden
+= field_set do
+  = f.referenced_association :sale, :field => :hidden
   -# FIXME =f.referenced_association :price, :source => :availables_for_sales, :new => {:mode => :sales, :currency => "sale.currency".to_sym }
-  =f.input :quantity
-  =f.input :unit, :readonly => true, :depend_on => :price, :value => "product.unit".to_sym
-  =f.input :annotation
+  = f.input :quantity
+  -# = f.input :unit, :readonly => true, :depend_on => :price, :value => "product.unit".to_sym
+  = f.input :annotation
 
--#=field_set :stock, :depend_on => :price, :if => :stockable? do
-  =f.referenced_association :building
-  =f.referenced_association :tracking, :depend_on => :building, :if => :trackable?
+-# = field_set :stock, :depend_on => :price, :if => :stockable? do
+  = f.referenced_association :building
+  = f.referenced_association :tracking, :depend_on => :building, :if => :trackable?
 
-=field_set :subscriptions do
-  =f.nested_association :subscriptions, :depend_on => :price, :if => :subscribing?
+= field_set :subscriptions do
+  = f.nested_association :subscriptions, :depend_on => :price, :if => :subscribing?
 
-=field_set :change_price, :grant_on => :change_prices_on_sales do
-  =f.input :price_amount
-  =f.referenced_association :tax
+= field_set :change_price, :grant_on => :change_prices_on_sales do
+  = f.input :price_amount
+  = f.referenced_association :tax
 
-=field_set :give_discount, :grant_on => :give_discounts_on_sales, :depend_on => :price, :if => "product.reduction_submissive?".to_sym do
-  =f.input :reduction_percentage, :size => 5
+= field_set :give_discount, :grant_on => :give_discounts_on_sales, :depend_on => :price, :if => "product.reduction_submissive?".to_sym do
+  = f.input :reduction_percentage, :size => 5
