Fixes whole indicator creation during birth

--- a/app/views/backend/mineral_matters/show.html.haml
+++ b/app/views/backend/mineral_matters/show.html.haml
@@ -17,15 +17,15 @@
 
             series = []
 
-            for indicator in [:population, :nitrogen_concentration]
-              items = ProductIndicatorDatum.where(:indicator => indicator, :product => @mineral_matter).order(:measured_at)
+            for indicator in [:population, :nitrogen_concentration].collect{|i| Nomen::Indicators[i] }
+              items = ProductIndicatorDatum.where(indicator_name: indicator.name, :product => @mineral_matter).order(:measured_at)
               item_h = items.sort.inject({}) do |hash, pair|
                 hash[pair.measured_at.to_usec] = pair.value.to_d
                 hash
               end
               data = []
               data = item_h.collect{|k,v| [k, v.to_s.to_f] }
-              series << {name: indicator.tl ,data: data }
+              series << {name: indicator.human_name ,data: data }
             end
 
         = spline_chart(series, legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom', border_width: 0 }, y_axis: {title: { text: :indicator.tl}, min: 0}, x_axis: {type: 'datetime', title: { enabled: true, text: :months.tl}})
