--- a/app/views/backend/interventions/_form.html.haml
+++ b/app/views/backend/interventions/_form.html.haml
@@ -3,7 +3,8 @@
 - if procedure = f.object.reference
   = field_set do
     = f.input :reference_name, as: :hidden
-    = f.referenced_association :production
+    = f.referenced_association :production_support
+    -#= f.referenced_association :production
     = f.input :started_at
     = f.input :stopped_at
 
@@ -52,15 +53,15 @@
         - if procedures.size == 1
           - procedure = procedures.first
           - can_go = true
-          = link_to(procedure.human_name, {reference_name: procedure.name}, class: "btn")
+          = link_to(procedure.human_name, {reference_name: procedure.name, production_support_id: params[:production_support_id]}, class: "btn")
         - else
-          = link_to(n.human_name, {procedure_nature: n.name}, class: "btn btn-important")
+          = link_to(n.human_name, {procedure_nature: n.name, production_support_id: params[:production_support_id]}, class: "btn btn-important")
     - if nature
       - procedures = Procedo.procedures_of_nature(nature.name.to_sym)
       - if procedures.any?
         - can_go = true
         - for procedure in Procedo.procedures_of_nature(nature.name.to_sym).sort{|a,b| a.human_name <=> b.human_name}
-          = link_to(procedure.human_name, {reference_name: procedure.name}, class: "btn")
+          = link_to(procedure.human_name, {reference_name: procedure.name, production_support_id: params[:production_support_id]}, class: "btn")
   -# if can_go
     = field_set :duration do
       %p OK
