--- a/app/views/backend/mineral_matters/show.html.haml
+++ b/app/views/backend/mineral_matters/show.html.haml
@@ -1,10 +1,10 @@
-=main_toolbar do |t|
-  -t.edit @mineral_matter
+= main_toolbar do |t|
+  - t.edit @mineral_matter
 
-=beehive do |b|
-  -b.cell dogit 
-    =attributes_list(@mineral_matter) do |l|
-      -l.attribute :name
+= beehive do |b|
+  - b.cell do 
+    = attributes_list do |l|
+      - l.attribute :name
 
   - b.tabbox do
     - b.cell(:interventions) do
@@ -33,5 +33,5 @@
         %strong= :no_data.tl
     - b.cell(tl(:x_indicators, :count => @mineral_matter.indicator_data.count)) do
       = list(:indicators)
-    - b.cell(:places) do
+    - b.cell(:place) do
       = list(:places)
