--- a/app/views/backend/productions/_support_fields.html.haml
+++ b/app/views/backend/productions/_support_fields.html.haml
@@ -1,4 +1,4 @@
 .nested-fields
   = link_to_remove_nested_association(:support, f)
   = f.referenced_association(:storage, :source => :production_supports, :wrapper_html => {:id => 'support-field'})
-  = f.nested_association(:marker_data)
+  = f.nested_association(:markers)
