--- a/app/themes/tekyla/stylesheets/main.css.scss
+++ b/app/themes/tekyla/stylesheets/main.css.scss
@@ -1889,43 +1889,15 @@ ul.tree {
 
 }
 
+
+ul.desc-list {
+  @include description_list;
+}
+
 .search {
   .results {
+    @include description_list;
     padding: $default-gap;
-    > li {
-      border-top: 2px solid $active-color;
-      @include background(linear-gradient(top, rgba(#FFF, 0.1), rgba(#777, 0), rgba(#000, 0.1)));
-      padding: $default-gap;
-      display: block;
-      * { line-height: round(1.4 * $fs-normal); }
-      > h3 {
-        a {
-        }
-        small {
-          color: #AAA;
-        }
-      }
-      > p {
-        &, * {
-          color: #777;
-        }
-      }
-      &:first-child {
-        border-top: none;
-      }
-      .content {
-        background: white;
-        margin-top: $default-gap;
-        padding: $default-gap;
-        @include box-shadow(0 0 $default-gap rgba(black, 0.18));
-        @include border-radius($default-border-radius);
-        *:first-child { margin-top: 0; padding-top: 0; }
-        *:last-child { margin-bottom: 0; padding-bottom: 0}
-        &.collapsed {
-          display: none;
-        }
-      }
-    }
   }
 
   .pagination {
