--- a/app/views/backend/dashboards/tools.html.haml
+++ b/app/views/backend/dashboards/tools.html.haml
@@ -1,4 +1,38 @@
-=beehive(:tool) do
-  - hbox do
-    - cell :last_incidents
-    - cell :last_document_archives
+= beehive(:tools) do |b|
+  - file = Rails.root.join("config", "tools.xml")
+  - if file.exist?
+    :ruby
+      doc = Nokogiri::XML(File.open(file)) do |config|
+        config.strict.nonet.noblanks
+      end
+      tools = {}
+      for element in doc.xpath("//tool")
+        tools[element.attr(:theme)] ||= []
+        tool = element.attributes.inject({}) do |h, pair|
+          h[pair.first.to_sym] = pair.second.to_s
+          h
+        end
+        full_name = []
+        full_name << tool[:supplier] unless tool[:supplier].to_s.gsub(/\W/, '').blank?
+        full_name << tool[:name] unless tool[:name].to_s.gsub(/\W/, '').blank?
+        tool[:full_name] = full_name.join(" — ")
+        tool[:description] = element.text
+        tools[element.attr(:theme)] << tool
+      end
+      tools = tools.to_a.sort{|a,b| a.first.mb_chars <=> b.first.mb_chars }
+    - while tools.any?
+      - b.hbox do
+        - for theme, list in tools.slice!(0, 3)
+          - b.cell theme do
+            %ul.desc-list
+              - for item in list.sort{|a,b| a[:full_name] <=> b[:full_name] }
+                %li
+                  %h3
+                    = link_to(item[:full_name], item[:url], target: "_blank")
+                    - if item[:access] == "paid"
+                      %i.lock
+                  %p= item[:description]
+  - b.hbox do
+    - b.cell :last_incidents
+    - b.cell :last_document_archives
+
