add markers for productions

--- a/app/views/backend/productions/show.html.haml
+++ b/app/views/backend/productions/show.html.haml
@@ -47,3 +47,5 @@
       = list(:interventions)
     - b.cell(:supports) do
       = list(:supports)
+    - b.cell(:markers) do
+      = list(:markers)
