update labels (of chart)

--- a/app/views/backend/dashboards/stocks.html.haml
+++ b/app/views/backend/dashboards/stocks.html.haml
@@ -4,8 +4,8 @@
     - cell :last_incoming_deliveries
   - hbox do
     - cell :currents_stocks_by_product_nature, :params => {variety: 'mineral_matter'}
-    - cell :currents_stocks_by_product_nature, :params => {variety: 'organic_matter'}
-    - cell :currents_stocks_by_product_nature, :params => {variety: 'straw'}
+    - cell :currents_stocks_by_product_nature, :params => {variety: 'manure'}
+    - cell :currents_stocks_by_product_nature, :params => {variety: 'grain'}
   - hbox do
     - cell :currents_stocks_by_product_nature, :params => {variety: 'animal_medicine'}
     - cell :currents_stocks_by_product_nature, :params => {variety: 'plant_medicine'}
