--- a/app/views/backend/cells/bank_chart_cells/show.html.haml
+++ b/app/views/backend/cells/bank_chart_cells/show.html.haml
@@ -28,6 +28,6 @@
       series << {name: cash.name, data: item_h.collect{|k,v| v.to_s.to_f } }
     end
 
-  = line_chart(series,legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom', border_width: 0 }, x_axis: { categories: categories.values})
+  = line_chart(series,legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom', border_width: 0 }, x_axis: { title: {text: :months.tl}, categories: categories.values}, y_axis: {title: {text: :values.tl}})
 - else
   %strong= :no_data.tl
