--- a/app/views/backend/cells/collected_taxes_cells/show.html.haml
+++ b/app/views/backend/cells/collected_taxes_cells/show.html.haml
@@ -34,6 +34,6 @@
 
     end
 
-  = bar_chart(series,legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom', border_width: 0 }, x_axis: { categories: categories.values})
+  = bar_chart(series,legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom', border_width: 0 }, x_axis: { title: {text: :taxes.tl}, categories: categories.values}, y_axis: {title: {text: :values.tl}})
 - else
   %strong= :no_data.tl
