--- a/app/views/backend/cultivable_zones/new.html.haml
+++ b/app/views/backend/cultivable_zones/new.html.haml
@@ -4,5 +4,5 @@
     = hidden_field_tag(:redirect, params[:redirect])
   .form-fields>= render('form', f: f)
   = form_actions do
-    = submit_tag(tl(:update), 'data-disable-with' => tl(:please_wait))
-    = link_to(tl(:cancel), backend_cultivable_land_parcel_url(resource), (params[:dialog] ? {:class => 'btn', 'data-close-dialog' => params[:dialog]} : {:class => 'btn'}))
+    = submit_tag(tl(:create), 'data-disable-with' => tl(:please_wait))
+    = link_to(tl(:cancel), backend_cultivable_zones_url, (params[:dialog] ? {:class => 'btn', 'data-close-dialog' => params[:dialog]} : {:class => 'btn'}))
