--- a/app/views/backend/productions/show.html.haml
+++ b/app/views/backend/productions/show.html.haml
@@ -18,25 +18,25 @@
   - if Nomen::Varieties[@production.variant.variety].self_and_parents.include?(Nomen::Varieties[:plant])
     - b.tabbox do
       - b.cell :map do
-        %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => CultivableLandParcel.of_production(@production).shape_view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "100%", :height => "400px", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
-          -CultivableLandParcel.of_production(@production).find_each do |cultivable_land_parcel|
-            %a{'xlink:href' => backend_cultivable_land_parcel_url(cultivable_land_parcel)}
-              %path{:d => cultivable_land_parcel.shape_as_svg, :title => cultivable_land_parcel.name }
+        %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => CultivableZone.of_production(@production).shape_view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "100%", :height => "400px", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
+          -CultivableZone.of_production(@production).find_each do |cultivable_zone|
+            %a{'xlink:href' => backend_cultivable_zone_url(cultivable_zone)}
+              %path{:d => cultivable_zone.shape_as_svg, :title => cultivable_zone.name }
 
       - b.cell :cropping_plan_chart do
         - if @production.supports.count > 0
           :ruby
 
-            cultivable_land_parcels = CultivableLandParcel.of_production(@production).order(:id)
+            cultivable_zones = CultivableZone.of_production(@production).order(:id)
 
-            if cultivable_land_parcels.count > 0
-              cultivable_land_parcels_serie = cultivable_land_parcels.collect do |cultivable_land_parcel|
-                        { name: cultivable_land_parcel.name, y: cultivable_land_parcel.area.to_s.to_f, color: cycle(*Backend::ChartsHelper::COLORS), url: backend_cultivable_land_parcel_path(cultivable_land_parcel) }
+            if cultivable_zones.count > 0
+              cultivable_zones_serie = cultivable_zones.collect do |cultivable_zone|
+                        { name: cultivable_zone.name, y: cultivable_zone.area.to_s.to_f, color: cycle(*Backend::ChartsHelper::COLORS), url: backend_cultivable_zone_path(cultivable_zone) }
               end
             end
 
             series = []
-            series << {name: CultivableLandParcel.model_name.human, data: cultivable_land_parcels_serie, size: "80%"}
+            series << {name: CultivableZone.model_name.human, data: cultivable_zones_serie, size: "80%"}
 
           = pie_chart(series, tooltip: {point_format: '{point.y: 1.3f} Ha'}, title: {text: (@production.area.in_hectare.round(3)).to_s}, plot_options: { pie: { allow_point_select: true, cursor: 'pointer', show_in_legend: true}}, legend: {})
         - else
