--- a/app/views/backend/cells/cropping_plan_on_cultivable_land_parcels_cells/show.html.haml
+++ b/app/views/backend/cells/cropping_plan_on_cultivable_land_parcels_cells/show.html.haml
@@ -15,15 +15,15 @@
           { name: production.name, y: production.area.in(:square_meter).to_d(:hectare).to_s.to_f, id: production.id, color: ligthen(activities_serie.detect{|a| a[:id] == production.activity_id}[:color], 0.3) }
         end
 
-        cultivable_land_parcels_serie = CultivableLandParcel.of_campaign(@campaigns).of_production(productions).order("production_id, id").collect do |cultivable_land_parcel|
-          { name: cultivable_land_parcel.name, y: cultivable_land_parcel.area.in(:square_meter).to_d(:hectare).to_s.to_f, color: ligthen(productions_serie.detect{|a| a[:id] == cultivable_land_parcel.supports.first.production_id}[:color], 0.3) }
+        cultivable_zones_serie = CultivableZone.of_campaign(@campaigns).of_production(productions).order("production_id, id").collect do |cultivable_zone|
+          { name: cultivable_zone.name, y: cultivable_zone.area.in(:square_meter).to_d(:hectare).to_s.to_f, color: ligthen(productions_serie.detect{|a| a[:id] == cultivable_zone.supports.first.production_id}[:color], 0.3) }
         end
       end
 
     series = []
     series << {name: Activity.model_name.human, data: activities_serie, size: "50%", data_labels: {color: 'white', distance: -30} }
     series << {name: Production.model_name.human, data: productions_serie, size: "75%", inner_size: "50%", data_labels: {enabled: false}}
-    series << {name: CultivableLandParcel.model_name.human, data: cultivable_land_parcels_serie, size: "80%", inner_size: "75%"}
+    series << {name: CultivableZone.model_name.human, data: cultivable_zones_serie, size: "80%", inner_size: "75%"}
 
   = pie_chart(series, tooltip: {point_format: '{point.y: 1.1f} Ha'}, title: @campaigns.map(&:name).to_sentence)
 - else
