--- a/app/views/backend/cells/cropping_plan_cells/show.html.haml
+++ b/app/views/backend/cells/cropping_plan_cells/show.html.haml
@@ -9,13 +9,13 @@
   :ruby
     # In theory, @activity and @productions should be produced here from @campaign only
     activities_serie = activities.collect do |activity|
-      {name: activity.name, y: activity.net_surface_area(@campaigns).in_square_meter.to_f(surface_unit), id: activity.id, url: backend_activity_path(activity), color: cycle(*Backend::ChartsHelper::COLORS) }
+      {name: activity.name, y: activity.net_surface_area(@campaigns).to_f(surface_unit), id: activity.id, url: backend_activity_path(activity), color: cycle(*Backend::ChartsHelper::COLORS) }
     end
 
     productions_serie = Production.of_campaign(@campaigns).of_activities(activities).order("activity_id, id").collect do |production|
-      campaigns[production.campaign.name] ||= 0.in_square_meter.to_d(surface_unit)
-      campaigns[production.campaign.name] += production.area.in(:square_meter).to_f(surface_unit)
-      {name: production.name, y: production.net_surface_area.in(:square_meter).to_f(surface_unit), url: backend_production_path(production), color: ligthen(activities_serie.detect{|a| a[:id] == production.activity_id}[:color], 0.3) }
+      campaigns[production.campaign.name] ||= 0.in(surface_unit)
+      campaigns[production.campaign.name] += production.net_surface_area.to_f(surface_unit)
+      {name: production.name, y: production.net_surface_area.to_f(surface_unit), url: backend_production_path(production), color: ligthen(activities_serie.detect{|a| a[:id] == production.activity_id}[:color], 0.3) }
     end
 
     series = []
