Fixes measure bug on maesure uses

--- a/app/views/backend/cells/cropping_plan_cells/show.html.haml
+++ b/app/views/backend/cells/cropping_plan_cells/show.html.haml
@@ -13,7 +13,7 @@
     end
 
     productions_serie = Production.of_campaign(@campaigns).of_activities(activities).order("activity_id, id").collect do |production|
-      campaigns[production.campaign.name] ||= 0.in(surface_unit)
+      campaigns[production.campaign.name] ||= 0.0
       campaigns[production.campaign.name] += production.net_surface_area.to_f(surface_unit)
       {name: production.name, y: production.net_surface_area.to_f(surface_unit), url: backend_production_path(production), color: ligthen(activities_serie.detect{|a| a[:id] == production.activity_id}[:color], 0.3) }
     end
