Duplicates indicitor data with measurement

--- a/app/views/backend/plants/show.html.haml
+++ b/app/views/backend/plants/show.html.haml
@@ -4,8 +4,11 @@
 
 = beehive do |b|
   - b.cell :details do
-    - if @plant.picture.exists?
-      .picture= image_tag(@plant.picture.url(:identity))
+    .picture
+      - if @plant.picture.exists?
+        = image_tag(@plant.picture.url(:identity))
+      - else
+        = @plant.shape_svg(width: 180, height: 180, :class => :map)
     = attributes_list(@plant) do |l| # liste des champs à afficher
       - l.attribute :name
       - l.attribute :born_at
@@ -22,6 +25,8 @@
       = list(:incidents)
     - b.cell(tl(:x_indicators, :count => @plant.indicator_data.count)) do
       = list(:indicators)
+    - b.cell(:measurements) do
+      = list(:measurements)
     - b.cell(:places) do
       = list(:places)
 
